# CodeMap

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  pr_body.md  pr_message.md
backend/: Dockerfile  requirements.txt  run_analysis.py  seed.py  test_chat.py
database/: 01_create_user_and_permissions.sql  02_analysis_jobs.sql  03_source_files.sql  04_code_chunks.sql  05_file_dependencies.sql  init.sql  (+2 more)
references/codebase-onboarding/projects/CronusL-1141__repo-insight/backend/: .dockerignore  .importlinter  Dockerfile  README.md  pyproject.toml  tmp_aiteam.json
references/codebase-onboarding/projects/CronusL-1141__repo-insight/backend/app/: main.py
references/codebase-onboarding/projects/CronusL-1141__repo-insight/backend/app/agents/: __init__.py  base.py  behavior_inferer.py  community_assessor.py  emergency_reporter.py  reporter.py  static_analyzer.py
references/codebase-onboarding/projects/CronusL-1141__repo-insight/backend/app/api/: __init__.py  analyze.py  health.py  progress_bus.py  report.py  routes.py
references/codebase-onboarding/projects/CronusL-1141__repo-insight/backend/app/guardrail/: __init__.py  judge_guardrail.py  regex_rules.py  regex_validator.py  semantic_validator.py  validator.py
references/codebase-onboarding/projects/CronusL-1141__repo-insight/backend/app/llm/: __init__.py  audit.py  cache.py  openai_provider.py  provider.py
references/codebase-onboarding/projects/CronusL-1141__repo-insight/backend/app/models/: __init__.py  agent_schemas.py  api_schemas.py  config.py
references/codebase-onboarding/projects/CronusL-1141__repo-insight/backend/app/orchestrator/: __init__.py  conflict_resolver.py  planner.py  timeout_guard.py
references/codebase-onboarding/projects/CronusL-1141__repo-insight/backend/app/services/: __init__.py  analysis_store.py  audit_db.py  input_sanitizer.py  observability.py  provider_catalog.py  repo_cloner.py  repo_map.py
references/codebase-onboarding/projects/CronusL-1141__repo-insight/backend/tests/: _stage5_ws_listener.py  conftest.py  e2e_stage4_integration.py  test_analysis_store.py  test_api_routes.py  test_audit_log.py  test_behavior_inferer.py  test_community_assessor.py  test_conflict_resolver_model_routing.py  test_emergency_reporter.py  test_guardrail.py  test_health.py  test_input_guardrail.py  test_llm_provider.py  test_observability.py  test_planner.py  test_planner_py312_cancelled_fallback.py  test_progress_bus.py  test_prompt_caching.py  test_provider_catalog.py  test_repo_cloner.py  test_repo_map.py  test_reporter.py  test_reporter_self_check.py  test_schemas.py  test_schemas_report_json.py  test_static_analyzer.py  test_ws_integration.py
references/codebase-onboarding/projects/CronusL-1141__repo-insight/backend/tests/architecture/: README.md  test_import_boundaries.py
references/codebase-onboarding/projects/CronusL-1141__repo-insight/backend/tests/fixtures/tiny_repo/: README.md  analyzer.py  complex_logic.py  config.py  god_object.py  parser.py  router.py  utils.py
references/codebase-onboarding/projects/CronusL-1141__repo-insight/backend/tests/fixtures/tiny_repo/tests/: test_simple.py
references/codebase-onboarding/projects/HarishChandran3304__TTG/backend/: .gitignore  Dockerfile  README.md  pyproject.toml
references/codebase-onboarding/projects/HarishChandran3304__TTG/backend/src/: main.py
references/codebase-onboarding/projects/HarishChandran3304__TTG/backend/src/utils/: cache.py  ingest.py  llm.py  prompt.py
references/codebase-onboarding/projects/HarishChandran3304__TTG/backend/tests/: test_utils.py  ws.py
references/codebase-onboarding/projects/Manas2412__CodeBase-Q-A-with-RAG/: .env-sample  README.md  pyproject.toml  test_it.py
references/codebase-onboarding/projects/Manas2412__CodeBase-Q-A-with-RAG/Frontend/: package-lock.json  package.json
references/codebase-onboarding/projects/Manas2412__CodeBase-Q-A-with-RAG/Frontend/src/: App.jsx  index.css
references/codebase-onboarding/projects/Manas2412__CodeBase-Q-A-with-RAG/app/: main.py
references/codebase-onboarding/projects/Manas2412__CodeBase-Q-A-with-RAG/app/db/: database.py  models.py
references/codebase-onboarding/projects/Manas2412__CodeBase-Q-A-with-RAG/app/ingestion/: chunker.py  cloner.py  embedder.py  indexer.py
references/codebase-onboarding/projects/Manas2412__CodeBase-Q-A-with-RAG/app/query/: answerer.py  hyde.py  retriever.py
references/codebase-onboarding/projects/Manas2412__CodeBase-Q-A-with-RAG/app/workers/: tasks.py
references/codebase-onboarding/projects/Manas2412__CodeBase-Q-A-with-RAG/migrations/: env.py
references/codebase-onboarding/projects/Manas2412__CodeBase-Q-A-with-RAG/migrations/versions/: 9022c7a69343_schema.py
references/codebase-onboarding/projects/Neverdecel__CodeRAG/: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  README.md  example.env  pyproject.toml  requirements.txt
references/codebase-onboarding/projects/Neverdecel__CodeRAG/.github/workflows/: ci-tests.yml
references/codebase-onboarding/projects/Neverdecel__CodeRAG/coderag/: __init__.py  api.py  config.py  indexer.py  llm.py  types.py  watch.py
references/codebase-onboarding/projects/Neverdecel__CodeRAG/coderag/chunking/: __init__.py  base.py  languages.py  python_ast.py  treesitter.py
references/codebase-onboarding/projects/Neverdecel__CodeRAG/coderag/embeddings/: __init__.py  fake_provider.py  fastembed_provider.py  openai_provider.py
references/codebase-onboarding/projects/Neverdecel__CodeRAG/coderag/retrieval/: __init__.py  fusion.py  search.py
references/codebase-onboarding/projects/Neverdecel__CodeRAG/coderag/store/: __init__.py  schema.py  sqlite_store.py  vector_index.py
references/codebase-onboarding/projects/Neverdecel__CodeRAG/coderag/surfaces/: __init__.py  cli.py  http_api.py  streamlit_app.py
references/codebase-onboarding/projects/Neverdecel__CodeRAG/tests/: conftest.py  test_chunking.py  test_config_and_providers.py  test_indexer.py  test_real_providers.py  test_retrieval.py  test_store.py  test_surfaces.py
(+1283 files in other folders)
