[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coderag"
version = "1.0.0"
description = "Standalone, local-first semantic code-search engine for large and custom codebases."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE-2.0.txt" }
authors = [{ name = "Neverdecel" }]
keywords = ["code-search", "rag", "embeddings", "faiss", "semantic-search", "retrieval"]
dependencies = [
    "faiss-cpu>=1.8.0.post1,<1.10",
    "numpy>=1.26,<2",
    "python-dotenv>=1.0,<2",
    "tenacity>=8.5,<9",
    "watchdog>=4.0,<5",
    "fastembed>=0.3,<1",
    "tree-sitter>=0.23,<0.26",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tqdm>=4.66",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29",
]
ui = [
    "streamlit>=1.38,<2",
]
openai = [
    "openai>=1.44,<2",
]
dev = [
    "black>=24.8",
    "flake8>=7.1",
    "isort>=5.13",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[project.scripts]
coderag = "coderag.surfaces.cli:main"

[tool.setuptools.packages.find]
include = ["coderag*"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that download models or hit the network (deselected in CI)",
]
addopts = "-q"
# Put the repo root on sys.path so `from tests.conftest import ...` resolves under a
# bare `pytest` invocation (not just `python -m pytest`).
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | env
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["coderag"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
exclude = ['venv/', 'build/']
