[project]
name = "repo-insight-backend"
version = "0.1.0"
description = "RepoInsight backend — multi-agent Python repository analysis system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "websockets>=12.0",
    "pylint>=3.2.0",
    "radon>=6.0.1",
    "coverage>=7.5.0",
    "gitpython>=3.1.43",
    "openai>=1.30.0",
    "scikit-learn>=1.5.0",
    "aiofiles>=23.2.1",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
]

[project.optional-dependencies]
# Heavy ML backend for semantic guardrail. Default build uses TF-IDF stub
# via scikit-learn (already in core deps). Install with `uv sync --extra semantic`
# if you need the sentence-transformers backend (pulls ~2GB of torch).
semantic = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "data", "tmp_repos", "tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ASYNC", "C4", "RET", "TCH"]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function calls in default args (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "SIM", "ASYNC"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
exclude = ["tests/fixtures", "data", ".venv"]

[[tool.mypy.overrides]]
module = [
    "radon.*",
    "tree_sitter.*",
    "tree_sitter_python.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true
